[gd_scene load_steps=9 format=2]

[ext_resource path="res://Theme/GOUDYSTO.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu/Option.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Menu/MapMenu.gd" type="Script" id=3]
[ext_resource path="res://SubScenes/REGGAEONE-REGULAR.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Theme/MainTheme.tres" type="Theme" id=5]
[ext_resource path="res://SubScenes/Menu/MapSelect.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="MapMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="MapSelect" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 51.0
margin_bottom = 560.0
alignment = 1

[node name="TurnLength" type="Label" parent="VBoxContainer"]
margin_top = 564.0
margin_right = 1920.0
margin_bottom = 634.0
focus_mode = 2
custom_fonts/font = SubResource( 1 )
text = "Turn Length"
align = 1
script = ExtResource( 2 )
option_id = "turn_dur"
default_index = 2
choice_list = [ "6 sec", "8 sec", "10 sec", "12 sec", "15 sec", "20 sec", "30 sec" ]
can_loop = false

[node name="Health" type="Label" parent="VBoxContainer"]
margin_top = 638.0
margin_right = 1920.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 1 )
text = "Starting Health"
align = 1
script = ExtResource( 2 )
option_id = "starting_health"
default_index = 3
choice_list = [ "1", "50", "80", "100", "150", "200", "500" ]
can_loop = false

[node name="ChestFreq" type="Label" parent="VBoxContainer"]
margin_top = 712.0
margin_right = 1920.0
margin_bottom = 782.0
custom_fonts/font = SubResource( 1 )
text = "Chest Frequency"
align = 1
script = ExtResource( 2 )
option_id = "chest_freq"
default_index = 1
choice_list = [ "rare", "normal", "max" ]
can_loop = false

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 786.0
margin_right = 1920.0
margin_bottom = 836.0
rect_min_size = Vector2( 0, 50 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_left = 709.0
margin_top = 840.0
margin_right = 1210.0
margin_bottom = 1029.0
size_flags_horizontal = 4
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[connection signal="map_changed" from="VBoxContainer/MapSelect" to="." method="_on_MapSelect_map_changed"]
[connection signal="value_changed" from="VBoxContainer/TurnLength" to="." method="_on_TurnLength_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Health" to="." method="_on_Health_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ChestFreq" to="." method="_on_ChestFreq_value_changed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
